# RPA-Backend

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run_json.py  test.py
.github/workflows/: python-app.yml
docs/: api.md
src/: __main__.py
src/api/: __init__.py  rest.py
src/examples/: test1.json  test2.json
src/modules/: __init__.py  base.py  basic.py  gui.py  hello.py  playwright.py
src/parser/: __init__.py  parser.py
src/task/: __init__.py  task.py
src/test/: sample.json
src/tests/: sample.json
src/tests/actions/: __init__.py  delay_hello.json  delay_n_hello.json  hello.json
src/tests/api/: test_rest.py
src/tests/modules/: test_hello.py  test_module.py
src/tests/parser/: test_parser.py
src/tests/task/: test_take_queue.py  test_task.py
src/types/: __init__.py  module.py  task.py
src/web/: web_rpa.py
test/: sample.json
