[tool.poetry]
name = "rpa-backend"
version = "0.1.0"
description = "TaXAu RPA Backend."
authors = ["sperjar <65524316+sperjar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rpa_backend"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.81.0"}
pydantic = "^1.10.2"
pytest = "^7.2.0"
selenium = "^4.6.0"
playwright = "^1.28.0"
