[tool.poetry]
name = "rpa-backend"
version = "0.1.0"
description = "TaXAu RPA Backend."
authors = ["sperjar <65524316+sperjar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "rpa_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.81.0"}
pydantic = "^1.10.2"
playwright = "^1.28.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
mkdocs = "^1.2.3"
mkdocs-material = "^9.0.15"
mkdocstrings = "^0.16.0"
